VPAT-533 VPAT-533 Fixed non-visible component populating 20px

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -189,6 +189,10 @@ ul.usa-sidenav {
   }
 }
 
+.usa-hidden {
+  margin: 0;
+}
+
 .usa-checkbox__input:disabled + .usa-checkbox__label {
   color: #71767a !important;
 }
